appId: com.getmobil.vendor
---
- runFlow: subflows/verify_signin_feature_boxes.yaml
- runFlow: subflows/verify_signin_statistics_row.yaml
- tapOn:
    id: 'login_username_input'
- inputText: ${TEST_EMAIL}
- tapOn:
    id: 'login_password_input'
- inputText: ${TEST_PASSWORD}
- hideKeyboard
- tapOn:
    id: 'login_button'
